--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,11 @@
 name: PlotSquared-NekoAddon
 main: com.github.SoyDary.PlotSquaredNekoAddon.PSNA
 depend: [PlotSquared]
+softdepend: [ProtocolLib]
 author: Dariela
 version: 1.0
 api-version: 1.13
+commands:
+ plotsquared-nekoaddon:
+  description: Comando principal
+  aliases: [psna]
