--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,13 @@
 name: PlotSquared-NekoAddon
 main: com.github.SoyDary.PlotSquaredNekoAddon.PSNA
-depend: [PlotSquared]
-softdepend: [ProtocolLib]
+depend: [PlotSquared, PlaceholderAPI]
+softdepend: [ProtocolLib, Essentials]
 author: Dariela
-version: 1.0.1
+version: 2.0
 api-version: 1.13
 commands:
  plotsquared-nekoaddon:
   description: Comando principal
-  aliases: [psna]
+  aliases: [psna, nekoplots]
+ starboard:
+  description: Menú de las mejores parcelas
